--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -40,7 +40,29 @@
             justify-content: space-around;
   
             .formInput {
-              width: 40%;
+              width: 80%;
+
+  
+              label {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+  
+                .icon {
+                  cursor: pointer;
+                }
+              }
+  
+              input {
+                width: 100%;
+                padding: 5px;
+                border: none;
+                border-bottom: 1px solid gray;
+              }
+            }
+            .formInputCategory {
+              width: 80%;
+              
   
               label {
                 display: flex;
@@ -68,7 +90,8 @@
               color: white;
               font-weight: bold;
               cursor: pointer;
-              margin-top: 10px;
+              margin-top: 40px;
+             
             }
           }
         }
