--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,11 +5,12 @@
     background-color: white;
   
     .top {
-      height: 50px;
+      height: 45px;
       display: flex;
-      align-items: center;
       justify-content: center;
-
+      align-items: center;
+     gap: 10px;
+     
       .icon1{
         color: #7e7c85;
         font-size: 20px;
